cabal-version:      2.4
name:               HaskellSudoku
version:            0.1.0.0
synopsis:           See README for more info
tested-with:        GHC==8.10.7

description:        HaskellSudoku project created within the EMURGO Academy's Haskell course.
homepage:           https://github.com/gitpod-io/template-haskell
license:            MIT
license-file:       LICENSE
author:             Darjan Fikic
maintainer:         Darjan Fikic

category:           Haskell Project
extra-source-files:
    .hlint.yaml
    CHANGELOG.md
    README.md

executable HaskellSudoku
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Board,
                    QuizBoard,
                    UI,
                    PlayGame

    build-depends:
        base ,
        random ,
        mtl ,
        containers ,
        ilist ,
        split

    hs-source-dirs:   sudoku
    default-language: Haskell2010
